<resources>
    <string name="app_name">CloudySea</string>
    <string name="add_or_delete_player">加减球员</string>
    <string name="modify_score">修改分数</string>
    <string name="player_edit">人员编辑</string>
    <string name="reset_device">重置设备</string>
    <string name="reset_device_">重置设备?</string>
    <string name="switch_change">切换交换</string>
    <string name="me_is_vip">我是会员></string>
    <string name="me_is_vip_title">我是会员</string>
    <string name="update_apk">程序更新</string>
    <string name="install_apk_failure">安装程序失败</string>
    <string name="statsu_updating">程序更新中,请勿进行其他操作</string>
    <string name="please_input_vip_number">请输入手机号或会员卡号</string>
    <string name="confrim_string">确定</string>
    <string name="another_game">所有人结束再开启下一局</string>
    <string name="sd_failure">授权SD卡权限失败，可能会影响使用</string>
    <string name="click_again_finish">再点击一次返回退出程序</string>
    <string name="long_click_to_edit">请长按分数进行修改</string>
    <string name="fucntion_to_get">关联云会员功能开发中,请稍候&#8230;</string>
    <string name="room_has_create">房间已创建,请直接通过远程按钮切换&#8230;</string>
    <string name="can_watch">允许旁观</string>
    <string name="long_click_to_edit_avator">请长按人物头像进行编辑</string>
    <string name="wrong_pwd">密码输入错误</string>
    <string name="password">密码</string>
    <string name="player_is_blank">玩家姓名不能为空</string>
    <string name="player_is_blank_2">球员姓名不能为空</string>
    <string name="modify_player_suc">修改球员姓名成功</string>
    <string name="current_players">现有成员</string>
    <string name="current_players_up_and_down">现有成员(可上下拖动)</string>
    <string name="to_add_players">添加成员</string>
    <string name="tips_create_new_game">提示: 创建后不能修改名字和头像,请提前修改</string>
    <string name="not_starnd">非标准</string>
    <string name="starnd">标准</string>
    <string name="all">全部</string>
    <string name="new_score">新计分</string>
    <string name="old_score">旧计分</string>
    <string name="bin_area">宾士域</string>
    <string name="mid_area">中路</string>
    <string name="xima_area">希玛</string>
    <string name="other_area">其他</string>
    <string name="shoot">点击拍摄</string>
    <string name="complete">完成</string>
    <string name="edit_players">编辑玩家</string>
    <string name="you_have_a_game">你已处于远程对战中,无法再加入!</string>
    <string name="you_in_a_remote_game">远程对战状态,不能进行此操作!</string>
    <string name="create_remote_battler">建立远程对战</string>
    <string name="pwd_veritify">密码验证</string>
    <string name="join_room">加入</string>
    <string name="cancel">取消</string>
    <string name="function_set">功能设置</string>
    <string name="function_set_up_and_down">功能设置(可上下滑动)</string>
    <string name="language_set">语言设置</string>
    <string name="channcel_set">球道设置</string>
    <string name="modify_player_name_2">修改球员姓名</string>
    <string name="pwd_enter_error">密码输入错误</string>
    <string name="current_channel_no_start">当前球局未开局，不能使用该功能</string>
    <string name="please_enter_pwd">请输入密码进行验证.</string>
    <string name="modify_name">修改姓名</string>
    <string name="reduce_name">减少球员</string>
    <string name="switch_status">改变交换状态</string>
    <string name="loading">加载中&#8230;</string>
    <string name="total_point">总分</string>
    <string name="to_one_ball">激活一球</string>
    <string name="to_two_ball">激活二球</string>
    <string name="local">本地</string>
    <string name="remote">远程</string>
    <string name="to_three_ball">激活三球</string>
    <string name="foul">犯规</string>
    <string name="server_is_reconnect">断线重连中...,请检测服务器是否正常启动</string>
    <string name="remove">移除</string>
    <string name="check_network">亲,当前没有网络接,请检测网络连接情况,当前连接ip:</string>
    <string name="nick_name">昵称</string>
    <string name="channel_count">球道数量:</string>
    <string name="tv_mode">TV模式</string>
    <string name="all_select">全选</string>
    <string name="lan_chi">中文</string>
    <string name="total_games">总局数</string>
    <string name="lan_eng">英文</string>
    <string name="lan_jap">日语</string>
    <string name="channel">道</string>
    <string name="game">局</string>
    <string name="lan_kor">韩语</string>
    <string name="lan_ger">德语</string>
    <string name="battler_watch">旁观</string>
    <string name="battler_join">加入</string>
    <string name="text_remote_battler">远程对战</string>
    <string name="text_player_edit">编辑球员</string>
    <string name="text_connect_vip">关联云会员</string>
    <string name="text_add_delete">加减球员</string>
    <string name="text_change_score">修改分数</string>
    <string name="text_pwd_not_empty">密码不能为空</string>
    <string name="no_member_number">会员号码不能为空</string>
    <string name="no_cloud_number">关联号码不能为空</string>
    <string name="modify_score_up_down">修改分数(可上下拖动)</string>
    <string name="not_vip_member">亲,此号码不是会员号码</string>
    <string name="cloudy_vip_suc">关联云会员成功</string>
    <string name="cloudy_vip_fail">关联云会员失败,请确定识别码是正确的</string>
    <string name="host_env_change">环境修改了，需要重新启动</string>
    <string name="create_remote_failed">创建远程对战失败,</string>
    <string name="no_remote_match">当前没有远程对战信息</string>
    <string name="join_game_failed">加入远程对战失败</string>
    <string name="battler_title_device">设备</string>
    <string name="battler_title_score">计分</string>
    <string name="battler_title_channel">球道</string>
    <string name="battler_title_create">建立对战</string>
    <string name="connect_to_vip">关联云会员</string>
    <string name="connect">关联</string>
    <string name="scan_co_connect">扫码关联</string>
    <string name="no_chinese">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ`¬!"£$%^*()~=#{}[];':,./?/*-_+&#060;&#062;&#064;&#038;
</string>
</resources>
