<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.cloudysea.views.WithLeftAndRightShapeTextView
        android:text="@string/reset_device"
        android:layout_marginTop="22.5dp"
        android:textSize="21dp"
        android:id="@+id/tv_reset_device_title"
        android:layout_width="wrap_content"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_reset_device_content"
        android:layout_marginTop="94.5dp"
        android:textSize="23dp"
        android:layout_width="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/reset_device_"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_marginTop="159dp"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="159dp">

        <TextView
            android:id="@+id/tv_reset_device_cacel"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:textSize="23dp"
            android:background="@drawable/btn_cancel"
            android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_reset_device_confirm"
        android:text="@string/complete"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:textSize="23dp"
        android:background="@drawable/btn_common"
        android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>