<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/rl_function_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.cloudysea.views.WithLeftAndRightShapeTextView
        android:layout_width="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/function_set"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:textSize="23dp"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">
        <View
            android:layout_width="450dp"
            android:background="@drawable/shape_function_line"
            android:layout_height="0.5dp"/>

        <TextView
            android:id="@+id/tv_language_set"
            android:textSize="@dimen/title_large_size_30"
            android:text="@string/language_set"
            android:layout_marginTop="@dimen/dimens_25_5"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ViewStub
            android:id="@+id/ll_language_set_container"
            android:layout_width="match_parent"
            android:layout="@layout/layout_vb_language_container"
            android:layout_height="wrap_content" />

        <View
            android:layout_marginTop="@dimen/dimens_25_5"
            android:layout_width="450dp"
            android:background="@drawable/shape_function_line"
            android:layout_height="0.5dp"/>

        <TextView
            android:id="@+id/tv_channel_set"
            android:textSize="@dimen/title_large_size_30"
            android:text="@string/channcel_set"
            android:layout_marginTop="@dimen/dimens_25_5"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ViewStub
            android:id="@+id/ll_channel_container"
            android:layout_width="match_parent"
            android:layout="@layout/layout_vb_channel_container"
            android:layout_height="wrap_content" />


        <View
            android:layout_marginTop="@dimen/dimens_25_5"
            android:layout_width="450dp"
            android:background="@drawable/shape_function_line"
            android:layout_height="0.5dp"/>

    </LinearLayout>


    <TextView
        android:id="@+id/tv_complete_action"
        android:layout_marginBottom="20dp"
        android:text="@string/complete"
        android:layout_alignParentBottom="true"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:textSize="23dp"
        android:background="@drawable/btn_common"
        android:layout_height="wrap_content" />
</RelativeLayout>