<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbarSize="2dp"
    android:scrollbarThumbVertical="@drawable/bg_shape_scrollbar_small"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_marginTop="25.5dp"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">
        <com.cloudysea.views.WithLeftAndRightShapeTextView
            android:id="@+id/tv_title_current_player"
            android:layout_marginLeft="10.5dp"
            android:layout_marginStart="10.5dp"
            android:layout_marginEnd="10.5dp"
            android:layout_marginRight="10.5dp"
            android:text="@string/current_players"
            android:textColor="@android:color/white"
            android:textSize="25.5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_current_players"
        android:layout_marginTop="61.5dp"
        android:layout_marginLeft="36dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="204dp"
    android:layout_width="match_parent"
        android:orientation="vertical"
    android:layout_height="wrap_content">

        <com.cloudysea.views.WithLeftAndRightShapeTextView
            android:id="@+id/tv_title_add_player"
            android:layout_marginLeft="10.5dp"
            android:layout_marginStart="10.5dp"
            android:layout_marginEnd="10.5dp"
            android:layout_marginRight="10.5dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/to_add_players"
            android:textColor="@android:color/white"
            android:textSize="25.5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:layout_marginTop="25.5dp"
            android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp"
            android:id="@+id/rv_current_add_players"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        
        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_complete_action"
            android:layout_marginTop="22.5dp"
            android:layout_marginBottom="28.5dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/complete"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:textSize="30dp"
            android:background="@drawable/btn_common"
            android:layout_height="wrap_content" />

</LinearLayout>


</RelativeLayout>
</ScrollView>