<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.cloudysea.views.WithLeftAndRightShapeTextView
        android:text="@string/create_remote_battler"
        android:id="@+id/tv_title_edit_player"
        android:layout_marginTop="22.5dp"
        android:layout_width="wrap_content"
        android:textSize="23dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/ball_use_style_one"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content" />


    <com.cloudysea.views.RemoteBattlerTopView
        android:id="@+id/rt_create_new_room"
        android:layout_width="match_parent"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="67dp"
        android:layout_height="37dp"/>


    <LinearLayout
        android:layout_marginTop="130dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="52dp"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ico_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:fontFamily="@font/ball_use_style_one"
            android:text="@string/total_games"
            android:textSize="@dimen/dimens_20"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/rl_add_number"
                android:background="@drawable/bg_add_number"
                android:layout_width="25dp"
                android:layout_height="25dp">
                <ImageView
                    android:layout_centerInParent="true"
                    android:src="@drawable/icon_add_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_round_text"
                android:background="@drawable/bg_number"
                android:layout_width="34dp"
                android:text="2"
                android:textSize="@dimen/dimens_20"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:fontFamily="@font/ball_use_style_one"
                android:layout_height="25dp" />

            <RelativeLayout
                android:id="@+id/rl_delete_number"
                android:background="@drawable/bg_delelet_num"
                android:layout_width="25dp"
                android:layout_height="25dp">
                <ImageView
                    android:layout_centerInParent="true"
                    android:src="@drawable/icon_delete_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

        </LinearLayout>

        <ImageView
            android:src="@drawable/icon_password_remote"
            android:layout_width="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dimens_20"
            android:text="@string/password"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/ball_use_style_one"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="150dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content">

            <View
                android:layout_marginTop="22dp"
                android:layout_width="match_parent"
                android:background="#54C6FF"
                android:layout_height="1dp"/>

        <EditText
            android:id="@+id/et_create_room_pwd"
            android:textColor="@android:color/white"
            android:background="@null"
            android:singleLine="true"
            android:inputType="textPassword"
            android:fontFamily="@font/ball_use_style_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        </RelativeLayout>
    </LinearLayout>


    <include
        android:layout_marginLeft="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="183dp"
        android:id="@+id/ll_watch_set"
        layout="@layout/layout_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <include
        android:layout_marginLeft="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="229dp"
        android:id="@+id/ll_status_set"
        layout="@layout/layout_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_below="@id/ll_status_set"
        android:layout_marginLeft="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:fontFamily="@font/ball_use_style_one"
        android:textSize="@dimen/dimens_16"
        android:text="@string/tips_create_new_game"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/tv_create_a_new_room_confirm"
        android:text="@string/complete"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="46dp"
        android:textSize="23dp"
        android:fontFamily="@font/ball_use_style_two"
        android:background="@drawable/btn_common"
        android:layout_height="wrap_content" />



</RelativeLayout>